--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@ Copyright 2017 Google Inc. All Rights Reserved.
 		<td colspan="3" style="width:50%; margin-bottom: 2px;"><input type="radio" onclick="handleClick(this);" name="ch_type" value="2"> Acceleration</td>
 	</tr>
   <tr>
-    <td colspan="2"><p id="p1" onselectstart="return false" style="visibility:hidden;padding-left:8px;height:10px;">P:</p></td>
-    <td colspan="2"><p id="p2" onselectstart="return false" style="visibility:hidden;height:10px;">T:</p></td>
-    <td colspan="2"><p id="p3" onselectstart="return false" style="visibility:hidden;padding-right:8px;height:10px;">H:</p></td>
+    <td colspan="2"><p id="p1" onselectstart="return false" style="visibility:hidden;padding-left:8px; padding-top:0px;">P:</p></td>
+    <td colspan="2"><p id="p2" onselectstart="return false" style="visibility:hidden; padding-top:0px;">T:</p></td>
+    <td colspan="2"><p id="p3" onselectstart="return false" style="visibility:hidden;padding-right:8px; padding-top:0px;">H:</p></td>
   </tr>
 </table> 
 
