--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px">
 
-    <h2>WebBT/VTT TinyNode Demoo</h2>
+    <h2 style="margin-bottom:0px;">WebBT/VTT TinyNode Demoo</h2>
 	
 
 <script>
@@ -61,7 +61,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 </script>
 
 
-<p>Connect to read data from VTT TinyNode<a id="p7" style="font-weight:600; color:#33ff33;"><a>.</p>
+<p>Connect to read data from VTT TinyNode<a id="p7" style="font-weight: 300; color:#33ff33;"><a>.</p>
  <table style="width:100%">
   <tr>
     <td style="width:50%"><button style="height:50px;width:100%" id="connect">CONNECT</button></td>
@@ -105,7 +105,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 	</tr>
   <tr>
     <td colspan="2"><p id="p1" onselectstart="return false" style="visibility:hidden;padding-left:8px; padding-top:0px;">P:</p></td>
-    <td colspan="2"><p id="p2" onselectstart="return false" style="visibility:hidden; padding-top:0px;">T:</p></td>
+    <td colspan="2"><p id="p2" onselectstart="return false" style="visibility:hidden;padding-top:0px;">T:</p></td>
     <td colspan="2"><p id="p3" onselectstart="return false" style="visibility:hidden;padding-right:8px; padding-top:0px;">H:</p></td>
   </tr>
 </table> 
