--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@ Copyright 2017 Google Inc. All Rights Reserved.
 	  
   </head>
 
-  <body style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px">
+  <body style="font-family: 'Titillium Web', monospace; font-size:16px; margin:10px">
 
-    <h2 style="margin-bottom:0px;">WebBT/VTT TinyNode Demoo</h2>
+    <h2 style="margin-bottom:-5px;">WebBT/VTT TinyNode Demo</h2>
 	
 
 <script>
@@ -61,7 +61,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 </script>
 
 
-<p>Connect to read data from VTT TinyNode<a id="p7" style="font-weight: 300; color:#33ff33;"><a>.</p>
+<p style="font-weight: 100;">Connect to read data from VTT TinyNode<a id="p7" style="font-weight: 600; color:#33ff33;"><a>.</p>
  <table style="width:100%">
   <tr>
     <td style="width:50%"><button style="height:50px;width:100%" id="connect">CONNECT</button></td>
