--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
   };
 </script>
 
- <table style="width:100%; text-align: center; font-weight:600; border-spacing: 0px; margin-top:10px; margin-bottom: 8px; background-color:#E6E0F8; padding-top:8px;">
+ <table style="width:100%; text-align: center; font-weight:600; border-spacing: 5px; margin-top:5px; margin-bottom: 8px; background-color:#E6E0F8; padding-top:3px; padding-bottom:0px;">
     <tr>
 		<td colspan="3" style="width:50%; margin-bottom: 2px;"><input type="radio" onclick="handleClick(this);" name="ch_type" value="1" checked> Environment</td>
 		<td colspan="3" style="width:50%; margin-bottom: 2px;"><input type="radio" onclick="handleClick(this);" name="ch_type" value="2"> Acceleration</td>
@@ -110,7 +110,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
   </tr>
 </table> 
 
-<div id="wrapper" style="position:relative; margin: 10px auto; ">
+<div id="wrapper" style="position:relative; margin: 0px auto; ">
 	<canvas id="env_chart_canvas" width="340" height="200" style="position:absolute; display: block; margin: 0 auto; border:1px solid #000000; background: #e5e7e9;"></canvas>
 	<canvas id="acc_chart_canvas" width="340" height="200" style="position:absolute; display: block; margin: 0 auto; border:1px solid #0099cc; background: #e5e7e9; visibility: hidden;"></canvas>
 </div>
@@ -120,7 +120,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
     <td style="text-align: left;"><p id="p5" style="font-family: 'Titillium Web'; font-size:11px;">Ready for connection...</p></td>
 	<td style="text-align: right;"><p id="p4" style="font-family: 'Titillium Web'; font-size:11px;">Messages: 0</p></td>
   </tr>
-   <td colspan="2"><p style="font-family: 'Titillium Web'; font-size:10px; font-weight:600; text-align: center; margin-top:-5px;">This page uses Web Bluetooth API + smoothie.js. Made by VTT Finland 2017.</p>
+   <td colspan="2"><p style="font-family: 'Titillium Web'; font-size:10px; font-weight:600; text-align: center; margin-top:-12px;">This page uses Web Bluetooth API + smoothie.js. Made by VTT Finland 2017.</p>
    </td>
 </table> 
 
