--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body style="font-family: 'Titillium Web', monospace; font-size:16px; margin:5px; padding:2px;">
 
-    <h2 style="margin-bottom:-5px;">WebBT/VTT TinyNode Demo</h2>
-	
+    <h2 style="margin-bottom:-14px; margin-top:4px;">WebBT/VTT TinyNode Demo</h2>
+	<hr style="border: none; border-bottom: 1px solid black;">
 
 <script>
   window.addEventListener('DOMContentLoaded', function() {
@@ -61,7 +61,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 </script>
 
 
-<p style="font-weight: 100;">Connect to read data from VTT TinyNode<a id="p7" style="font-weight: 600; color:#33ff33;"><a>.</p>
+<p style="font-weight: 100;">Connect to VTT TinyNode<a id="p7" style="font-weight: 600; color:#33ff33;"><a>.</p>
  <table style="width:100%">
   <tr>
     <td style="width:50%"><button style="height:50px;width:100%" id="connect">CONNECT</button></td>
