--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@ var bluetoothDevice;
 var setter;
 var getter;
 var msgcounter;
-var env_chart = new SmoothieChart({millisPerPixel:20,maxValueScale:1.16,grid:{millisPerLine:1000},yRangeFunction:envYRangeFunction});
-var acc_chart = new SmoothieChart({millisPerPixel:5,maxValueScale:1.16,grid:{millisPerLine:1000},yRangeFunction:accYRangeFunction});
+var env_chart = new SmoothieChart({responsive: true};{millisPerPixel:20,maxValueScale:1.16,grid:{millisPerLine:1000},yRangeFunction:envYRangeFunction});
+var acc_chart = new SmoothieChart({responsive: true};{millisPerPixel:5,maxValueScale:1.16,grid:{millisPerLine:1000},yRangeFunction:accYRangeFunction});
 var ts1 = new TimeSeries();
 var ts_acc1 = new TimeSeries();
 var ts_acc2 = new TimeSeries();
@@ -184,6 +184,7 @@ function swapCanvases(value){
     	
 	if(value==1 || value==0){
 	document.getElementById("env_chart_canvas").style.visibility='visible';
+	document.getElementById("env_chart_canvas").width = window.innerWidth;
 	document.getElementById("acc_chart_canvas").style.visibility='hidden';
 		//env_chart_canvas.style.visibility='hidden';
 		//acc_chart_canvas.style.visibility='visible';
