--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ function swapCanvases(value){
     	
 	if(value==1 || value==0){
 	document.getElementById("env_chart_canvas").style.visibility='visible';
-	document.getElementById("env_chart_canvas").width = window.innerWidth;
+	//document.getElementById("env_chart_canvas").width = window.innerWidth;
 	document.getElementById("acc_chart_canvas").style.visibility='hidden';
 		//env_chart_canvas.style.visibility='hidden';
 		//acc_chart_canvas.style.visibility='visible';
