--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@ Copyright 2017 Google Inc. All Rights Reserved.
 </table> 
 
 <div id="wrapper" style="position:relative; margin: 0px auto; ">
-	<canvas id="env_chart_canvas" height="200" style="position:absolute; display: block; margin: 0 auto; border:1px solid #000000; background: #e5e7e9;"></canvas>
-	<canvas id="acc_chart_canvas" height="200" style="position:absolute; display: block; margin: 0 auto; border:1px solid #0099cc; background: #e5e7e9; visibility: hidden;"></canvas>
+	<canvas id="env_chart_canvas" height="200" width="340" style="position:absolute; display: block; margin: 0 auto; border:1px solid #000000; background: #e5e7e9;"></canvas>
+	<canvas id="acc_chart_canvas" height="200" width="340" style="position:absolute; display: block; margin: 0 auto; border:1px solid #0099cc; background: #e5e7e9; visibility: hidden;"></canvas>
 </div>
 
  <table width="340" align="center" style=" margin-top:200px; padding:0px;">
