--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
        <script type="text/javascript" src="../smoothie.js"></script>
 	   <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet"> 
 	   
-    <title>Web BT / Device Information Characteristics</title>
+    <title>Web BT/TinyNode Demo</title>
     <script>
       // Add a global error event listener early on in the page load, to help ensure that browsers
       // which don't support specific functionality still end up displaying a meaningful message.
@@ -34,7 +34,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body style="font-family: 'Titillium Web', monospace; font-size:16px; margin:5px; padding:2px;">
 
-    <h2 style="margin-bottom:-5px;">WebBT/VTT TinyNode Demo</h2>
+    <h2 style="margin-bottom:-5px;">WebBT/VTT TinyNode Demo.</h2>
 	
 
 <script>
