--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body style="font-family: 'Titillium Web', monospace; font-size:16px; margin:5px; padding:2px;">
 
-    <h2 style="margin-bottom:-5px;">WebBT/VTT TinyNode Demo.</h2>
+    <h2 style="margin-bottom:-5px;">WebBT/VTT TinyNode Demo</h2>
+	
 	
 
 <script>
