--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 	</tr>
   <tr>
     <td colspan="2"><p id="p1" onselectstart="return false" style="visibility:hidden;padding-left:8px; padding-top:0px;">P:</p></td>
-    <td colspan="2"><p id="p2" onselectstart="return false" style="visibility:hidden;padding-top:0px;">T:</p></td>
+    <td colspan="2"><p id="p2" onselectstart="return false" style="visibility:hidden;padding-left:4px;padding-right:4px;">T:</p></td>
     <td colspan="2"><p id="p3" onselectstart="return false" style="visibility:hidden;padding-right:8px; padding-top:0px;">H:</p></td>
   </tr>
 </table> 
