--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
     <h2 style="margin-bottom:-5px;">WebBT/VTT TinyNode Demo</h2>
 	
-	
+	<hr style="border: none; height: 1px;">
 
 <script>
   window.addEventListener('DOMContentLoaded', function() {
