--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@ Copyright 2017 Google Inc. All Rights Reserved.
 	  
   </head>
 
-  <body style="font-family: 'Titillium Web', monospace; font-size:16px; margin:5px; padding:2px;">
+  <body style="font-family: 'Titillium Web', monospace; font-size:14px; margin:5px; padding:2px;">
 
-    <h2 style="margin-bottom:-5px;">WebBT/VTT TinyNode Demo</h2>
+    <h2 style="margin-top:-2px; margin-bottom: -14px;">WebBT/VTT TinyNode Demo</h2>
 	
-	<hr style="border: none; height: 1px;">
+	<hr style="border:none; height:1px; background-color: #000; margin-bottom:-5px">
 
 <script>
   window.addEventListener('DOMContentLoaded', function() {
@@ -65,8 +65,8 @@ Copyright 2017 Google Inc. All Rights Reserved.
 <p style="font-weight: 100;">Connect to read data from VTT TinyNode<a id="p7" style="font-weight: 600; color:#33ff33;"><a>.</p>
  <table style="width:100%">
   <tr>
-    <td style="width:50%"><button style="height:50px;width:100%" id="connect">CONNECT</button></td>
-    <td style="width:50%"><input style="height:50px;width:100%" id="disconnect" onclick="disconnect()" type="button" value="DISCONNECT" disabled="true" /></td>
+    <td style="width:50%"><button style="height:50px;width:100%;font-weight:600;" id="connect">CONNECT</button></td>
+    <td style="width:50%"><input style="height:50px;width:100%;font-weight:600;" id="disconnect" onclick="disconnect()" type="button" value="DISCONNECT" disabled="true" /></td>
   </tr>
 </table> 
 
