--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body style="font-family: 'Titillium Web', monospace; font-size:14px; margin:5px; padding:2px;">
 
-    <h2 style="margin-top:-2px; margin-bottom: -14px;">WebBT/VTT TinyNode Demo</h2>
+    <h2 style="margin-top: 2px; margin-bottom: -14px;">WebBT/VTT TinyNode Demo</h2>
 	
 	<hr style="border:none; height:1px; background-color: #000; margin-bottom:-5px">
 
@@ -109,12 +109,19 @@ Copyright 2017 Google Inc. All Rights Reserved.
     <td colspan="2"><p id="p2" onselectstart="return false" style="visibility:hidden;padding-left:4px;padding-right:4px;">T:</p></td>
     <td colspan="2"><p id="p3" onselectstart="return false" style="visibility:hidden;padding-right:8px; padding-top:0px;">H:</p></td>
   </tr>
-</table> 
-
-<div id="wrapper" style="position:relative; margin: 0px auto;">
+  
+  <tr>
+  <td style="line-height: 200px;">
+  <div id="wrapper" style="position:relative; margin: 0px auto;">
 	<canvas id="env_chart_canvas" height="200" width="340" style="position:absolute; display: block; margin: 0 auto; border:1px solid #000000; background: #e5e7e9;"></canvas>
 	<canvas id="acc_chart_canvas" height="200" width="340" style="position:absolute; display: block; margin: 0 auto; border:1px solid #0099cc; background: #e5e7e9; visibility: hidden;"></canvas>
 </div>
+&nbsp;
+  </td>
+  </tr>
+</table> 
+
+
 
  <table width="340" align="center" style=" margin-top:200px; padding:0px;">
   <tr>
