--- a/index.html
+++ b/index.html
@@ -112,9 +112,21 @@ Copyright 2017 Google Inc. All Rights Reserved.
   
   <tr>
   <td align="center" style="line-height: 200px;">
-  <div id="wrapper" style="position:relative; margin: 0px auto;">
-	<canvas id="env_chart_canvas" height="200" width="332" style="position:absolute; display: block; margin: 0 auto; border:1px solid #000000; background: #e5e7e9;"></canvas>
-	<canvas id="acc_chart_canvas" height="200" width="332" style="position:absolute; display: block; margin: 0 auto; border:1px solid #000000; background: #e5e7e9; visibility: hidden;"></canvas>
+  <div id="wrapper" style="
+    position: fixed;
+	max-width: 790px;
+    left: 0px;    
+	right: 0px;
+    height: 200px;
+    z-index: 1;
+	margin-left: 12px;
+	margin-right: 14px;">
+	<canvas id="env_chart_canvas" height="200" style="position:absolute; border:1px solid #000000; background: #e5e7e9; width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    z-index: 1;"></canvas>
+	<canvas id="acc_chart_canvas" height="200" style="position:absolute; display: block; margin: 0 auto; border:1px solid #000000; background: #e5e7e9; visibility: hidden;"></canvas>
 </div>
 &nbsp;
   </td>
