--- a/index.html
+++ b/index.html
@@ -140,8 +140,15 @@ Copyright 2017 Google Inc. All Rights Reserved.
     <td style="text-align: left;"><p id="p5" style="font-family: 'Titillium Web'; font-size:11px;">Ready for connection...</p></td>
 	<td style="text-align: right;"><p id="p4" style="font-family: 'Titillium Web'; font-size:11px;">Messages: 0</p></td>
   </tr>
-   <td colspan="2"><p style="font-family: 'Titillium Web'; font-size:10px; font-weight:600; text-align: center; margin-top:-12px;">This page uses Web Bluetooth API + smoothie.js. Made by VTT Finland 2017.</p>
-   </td>
+  <tr>
+	   <td colspan="2"><p style="font-family: 'Titillium Web'; font-size:10px; font-weight:600; text-align: center; margin-top:-12px;">This page uses Web Bluetooth API + smoothie.js. Made by VTT Finland 2017.</p>
+	   </td>
+   </tr>
+   <tr>
+	   <td colspan="2" align="center">
+	   <img src="vtt_logo.jpg">
+	   </td>
+   </tr>
 </table> 
 
 
