--- a/led_display/led.html
+++ b/led_display/led.html
@@ -309,9 +309,7 @@ async function connect() {
 			// [4] CMD to change color (initial value 0x12)
 			// [5] RGB value for RED
 			// [6] RGB value for GREEN
-			// [7] RGB value for BLUE
-
-			log("> disp_msg: " + displaymessage);
+			// [7] RGB value for BLUE			
 			
 			let encoder = new TextEncoder('utf-8');
 			var msg_fraction = displaymessage.substring(m*number_payload_bytes, m*number_payload_bytes+number_payload_bytes)
@@ -327,7 +325,7 @@ async function connect() {
 				msg_data[msg_fraction.length + 4] = 0;
 			}
 			
-			log("nih: " + parseInt(clr_values[0]);
+			log('nih: ' + clr_values[0];
 			
 			if (m == 0){	// First message, add color coding to the reserved space
 				msg_data[4] = cmd_change_color;
