--- a/led_display/led.html
+++ b/led_display/led.html
@@ -326,8 +326,8 @@ async function connect() {
 				msg_data[msg_fraction.length + 4] = 0;
 			}
 			
-			//log('nih: ' + clr_values[0]);
-			log('nih: ');
+			log('nih1: ');
+			log('nih2: ' + clr_values[0]);
 			
 			if (m == 0){	// First message, add color coding to the reserved space
 				msg_data[4] = cmd_change_color;
