--- a/led_display/led.html
+++ b/led_display/led.html
@@ -326,12 +326,11 @@ async function connect() {
 				msg_data[msg_fraction.length + 4] = 0;
 			}
 			
-			log('nih1: ');
-			log('nih2: ' + clr_values[0]);
+			log('col 1: ' + clr_values[0]);
 			
 			if (m == 0){	// First message, add color coding to the reserved space
 				msg_data[4] = cmd_change_color;
-//				msg_data[5] = parseInt(clr_values[0]);
+				msg_data[5] = parseInt(clr_values[0]) & 0xff;
 //				msg_data[6] = clr_values[1];
 //				msg_data[7] = clr_values[2];
 			}
